colibri/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colibri
  labels:
    app.kubernetes.io/name: colibri
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: colibri
  ports:
    - name: http
      port: 8000
      targetPort: http
